# twitter_sentiment_ml

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml  sync_to_hf.yml
data/: output.csv
flagged/: log.csv
notebooks/: 01_load_data.ipynb  populate_feature_store.ipynb
src/: data.py  frontend.py  inference.py
